kubernetes/catalog/memos/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: memos
  namespace: memos
  labels:
    app.kubernetes.io/name: memos
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`memos.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: memos
          port: 5230
  tls:
    secretName: int-rlservers-com-tls
